--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -346,3 +346,12 @@ body{
 .height-auto{
     height: auto !important;
 }
+.shadow-outline{
+    box-shadow: 0px 0px 1px 1px #333333;
+}
+.back-drop-blur-lg{
+    backdrop-filter: blur(40px);
+}
+.bg-21{
+    background-color: #2121213b;
+}
